--- a/views/bio_page1.hbs
+++ b/views/bio_page1.hbs
@@ -1,4 +1,5 @@
-
+<div class="page1">
+<i class='bx bx-chevron-left'></i>
  <section class="bio_first">
         <div class="first">
             <div class="genika">
@@ -40,4 +41,13 @@
             </div>
         </div>
     </section>
+<i class='bx bx-chevron-right'></i>
+</div>
+
+<script>
+    let right=document.querySelector('.bx.bx-chevron-right');
+    right.addEventListener('click',function(event){
+        window.location.href="/biography/nuenen";
+    })
+</script>
 
