--- a/views/bio_page3.hbs
+++ b/views/bio_page3.hbs
@@ -1,5 +1,5 @@
-
-
+<div class="page3">
+<i class='bx bx-chevron-left'></i>
  <section>
         <div class="parisi">
             <div class="carousel-louvre">
@@ -44,3 +44,19 @@
                 </div>
              </div>
     </section>
+    <i class='bx bx-chevron-right'></i>
+</div>
+
+<script>
+    let right=document.querySelector('.bx.bx-chevron-right');
+    right.addEventListener('click',function(event){
+        window.location.href="/biography/arles";
+    })
+
+    let left=document.querySelector('.bx.bx-chevron-left');
+    left.addEventListener('click',function(event){
+        window.location.href="/biography/nuenen";
+    })
+
+
+</script>
