--- a/views/bio_page4.hbs
+++ b/views/bio_page4.hbs
@@ -1,5 +1,5 @@
-
-
+<div class="page4">
+<i class='bx bx-chevron-left'></i>
     <section>
         <div class="arles-body">
             <div class="topio">
@@ -81,3 +81,19 @@
     </div>
 
     </section>
+    <i class='bx bx-chevron-right'></i>
+</div>
+
+<script>
+    let right=document.querySelector('.bx.bx-chevron-right');
+    right.addEventListener('click',function(event){
+        window.location.href="/biography/saint-remy";
+    })
+
+    let left=document.querySelector('.bx.bx-chevron-left');
+    left.addEventListener('click',function(event){
+        window.location.href="/biography/paris";
+    })
+
+
+</script>
