--- a/views/bio_page5.hbs
+++ b/views/bio_page5.hbs
@@ -1,4 +1,5 @@
-
+<div class="page5">
+<i class='bx bx-chevron-left'></i>
     <section>
         <div class="hospital">
             <div class="starry-night">
@@ -44,3 +45,22 @@
 
         </div>
     </section>
+
+<i class='bx bx-chevron-right'></i>
+
+</div>
+
+
+<script>
+    let right=document.querySelector('.bx.bx-chevron-right');
+    right.addEventListener('click',function(event){
+        window.location.href="/biography/auvers-sur-oise";
+    })
+
+    let left=document.querySelector('.bx.bx-chevron-left');
+    left.addEventListener('click',function(event){
+        window.location.href="/biography/arles";
+    })
+
+
+</script>
