--- a/views/bio_page6.hbs
+++ b/views/bio_page6.hbs
@@ -1,4 +1,5 @@
-
+<div class="page6">
+    <i class='bx bx-chevron-left'></i>
     <section>
         <div class="last">
             <div class="doctor">
@@ -68,3 +69,15 @@
             </div>
         </div>
     </section>
+    <i class='bx bx-chevron-right'></i>
+</div>
+
+<script>
+
+    let left=document.querySelector('.bx.bx-chevron-left');
+    left.addEventListener('click',function(event){
+        window.location.href="/biography/saint-remy";
+    })
+
+
+</script>
