--- a/views/bio_page_2.hbs
+++ b/views/bio_page_2.hbs
@@ -1,5 +1,5 @@
-
-
+<div class="page2">
+<i class='bx bx-chevron-left'></i>
  <section>
         <div class="sec_pag">
             <div class="farmers-plant">
@@ -42,3 +42,19 @@
         </div>
 
     </section>
+    <i class='bx bx-chevron-right'></i>
+</div>
+
+<script>
+    let right=document.querySelector('.bx.bx-chevron-right');
+    right.addEventListener('click',function(event){
+        window.location.href="/biography/paris";
+    })
+
+    let left=document.querySelector('.bx.bx-chevron-left');
+    left.addEventListener('click',function(event){
+        window.location.href="/biography/earliest-paintings";
+    })
+
+
+</script>
